Fix horizontal scrollbar issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,9 +39,7 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: var(--font-inter), sans-serif;
+  @apply text-slate-800 bg-slate-50 overflow-x-hidden;
 }
 
 h1,
